--- a/accessibility-inspector/popup/report-popup.html
+++ b/accessibility-inspector/popup/report-popup.html
@@ -20,7 +20,6 @@
             </select>
             <button class="primary-btn" id="downloadAsFormat"> Download </button>
         </div>
-        
     </nav>
     <div id="report--content--html">
         <header class="summary">
@@ -77,7 +76,7 @@
     <div id="report--content--markdown" hidden>
         <div id="report--content--markdown--preview"></div>
     </div>
-    <div id="report-content--json">
+    <div id="report-content--json" hidden>
         <pre><code id="report-content--json--preview" class="issuses__list__details__code"></code></pre>
     </div>
     <script src="report-popup.js"></script>
