Refactor 'issues' naming and update UI labels
Standardized variable and class names from 'issuses' to 'issues' across report-popup.js, report-popup-local.js, and popup.html for consistency. Updated UI labels and button text to improve clarity and localization, including Russian translations and more accurate terminology.

--- a/accessibility-inspector/popup/popup.html
+++ b/accessibility-inspector/popup/popup.html
@@ -47,7 +47,7 @@
         </button>
         
         <button id="current-page-btn" class="secondary-btn" type="button">
-          Current Page
+          Проверить текущую страницу
         </button>
       </div>
       
