--- a/accessibility-inspector/popup/report-popup.html
+++ b/accessibility-inspector/popup/report-popup.html
@@ -18,7 +18,7 @@
                 <option value="json">JSON</option>
                 <option value="markdown">MARKDOWN</option>
             </select>
-            <button class="primary-btn" id="downloadAsFormat"> Download </button>
+            <button class="primary-btn" id="downloadAsFormat"> Скачать </button>
         </div>
     </nav>
     <div id="report--content--html">
@@ -49,35 +49,35 @@
         </header>
         <main>
             <h2>Подробности</h2>
-            <div class="issuses__controls">
-                <div class="issuses__controls__selector">
-                    <label for="selector-by-issuse-types">By issuse types</label>
-                    <select id="selector-by-issuse-types">
+            <div class="issues__controls">
+                <div class="issues__controls__selector">
+                    <label for="selector-by-issue-types">By issue types</label>
+                    <select id="selector-by-issue-types">
                         <option value="null"> -- Not selected --</option>
                     </select>
                 </div>
-                <div class="issuses__controls__selector">
+                <div class="issues__controls__selector">
                     <label for="selector-by-categorys">By category</label>
                     <select id="selector-by-categorys">
                         <option value="null"> -- Not selected --</option>
                     </select>
                 </div>
-                <div class="issuses__controls__buttons">
-                    <button class="primary-btn" id="btn-expand-issuses">Expand all</button>
-                    <div class="issuses__controls__buttons__filters">
-                        <button class="secondary-btn" id="btn-reset-filters">Reset filters</button>
-                        <button class="primary-btn" id="btn-accept-filters">Accept filters</button>
+                <div class="issues__controls__buttons">
+                    <button class="primary-btn" id="btn-expand-issues">Развернуть всё</button>
+                    <div class="issues__controls__buttons__filters">
+                        <button class="secondary-btn" id="btn-reset-filters">Сбросить фильтры</button>
+                        <button class="primary-btn" id="btn-accept-filters">Применить фильтры</button>
                     </div>
                 </div>
             </div>
-            <div id="issuses__list"></div>
+            <div id="issues__list"></div>
         </main>
     </div>
     <div id="report--content--markdown" hidden>
         <div id="report--content--markdown--preview"></div>
     </div>
     <div id="report-content--json" hidden>
-        <pre><code id="report-content--json--preview" class="issuses__list__details__code"></code></pre>
+        <pre><code id="report-content--json--preview" class="issues__list__details__code"></code></pre>
     </div>
     <script src="report-popup.js"></script>
     <script src="report-popup-local.js"></script>
